2008-11-19  Eric Botcazou  <ebotcazou@adacore.com>

	* gfortran.dg/f2003_io_1.f03: XFAIL for all SPARC targets.
	* gfortran.dg/f2003_io_4.f03: Ditto.
	* gfortran.dg/f2003_io_5.f03: Ditto.
	* gfortran.dg/f2003_io_6.f03: Ditto.
	* gfortran.dg/f2003_io_7.f03: Ditto.

2008-11-19  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/38171
	* gfortran.dg/module_equivalence_6.f90: New test.

2008-11-18  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/38051
	* gcc.c-torture/execute/pr38051.c (buf): Remove aligned attribute.
	(buf2): Removed.
	(main): Only run on little endian targets with
	sizeof (long) == sizeof (void *).  Use just one buffer, align the
	pointers at runtime.

2008-11-18  Thomas Koenig  <tkoenig@gcc.gnu.org>

	PR libfortran/38135
	* gfortran.dg/reshape_pad_1.f90:  New test case.

2008-11-18  Uros Bizjak  <ubizjak@gmail.com>

	PR target/37362
	* gcc.target/mips/pr37362.c: New test.

2008-11-18  Jason Merrill  <jason@redhat.com>
	    Jakub Jelinek  <jakub@redhat.com>

	PR c++/37962
	* g++.dg/cpp0x/auto[38].C: Adjust expected errors.
	* g++.dg/cpp0x/auto9.C: New test.
	* g++.dg/cpp0x/auto10.C: New test.

2008-11-17  Adam Nemet  <anemet@caviumnetworks.com>

	* gcc.c-torture/execute/20081117-1.c: New test.

2008-11-17  Richard Sandiford  <rdsandiford@googlemail.com>

	* gcc.target/mips/dspr2-MULT.c: Just check for $ac1 and $ac2.
	* gcc.target/mips/dspr2-MULTU.c: Likewise.

2008-11-17  Richard Sandiford  <rdsandiford@googlemail.com>

	* gcc.target/mips/madd-5.c: New test.
	* gcc.target/mips/madd-6.c: Likewise.
	* gcc.target/mips/madd-7.c: Likewise.
	* gcc.target/mips/madd-8.c: Likewise.
	* gcc.target/mips/msub-5.c: Likewise.
	* gcc.target/mips/msub-6.c: Likewise.
	* gcc.target/mips/msub-7.c: Likewise.
	* gcc.target/mips/msub-8.c: Likewise.

2008-11-17  Richard Sandiford  <rdsandiford@googlemail.com>

	* gcc.target/mips/no-smartmips-ror-1.c: Use -march=mips32 instead
	of -march=mips32r2.

2008-11-17  Jack Howarth  <howarth@bromo.med.uc.edu>
